[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rs3-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.134.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]

[tool.setuptools]
py-modules = [
    "app",
    "collector",
    "config",
    "db",
    "log",
    "skills",
    "utils",
    "web",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "routes*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
